--- a/header.html
+++ b/header.html
@@ -1,1 +1,4 @@
-<a href="https://paypal.me/basaratali"><img src="https://img.shields.io/badge/Donate-PayPal-green.svg"/></a>
+<script>
+  var foo = document.querySelector('.search-noresults');
+  foo.innerHTML = '<a href="https://paypal.me/basaratali"><img src="https://img.shields.io/badge/Donate-PayPal-green.svg"/></a>' + foo.innerHTML;
+</script>
