--- a/header.html
+++ b/header.html
@@ -1,9 +1,11 @@
 <script>
   var interval = setInterval(function(){
-      var foo = document.querySelector('.search-noresults');
-      if(foo) {
-          foo.innerHTML = '<a href="https://paypal.me/basaratali" style="display: block;text-align: center;"> Buy me a beer 🍻 🌹 <br><br><img src="https://img.shields.io/badge/Donate-PayPal-green.svg"><br><br></a>' + foo.innerHTML;
-          clearInterval(interval);
+      var el = document.querySelector('.search-noresults');
+      if(el) {
+        var elChild = document.createElement('div');
+        elChild.innerHTML = '<a href="https://paypal.me/basaratali" style="display: block;text-align: center;"> Buy me a beer 🍻 🌹 <br><br><img src="https://img.shields.io/badge/Donate-PayPal-green.svg"><br><br></a>';
+        el.insertBefore(elChild, el.firstChild);
+        clearInterval(interval);
       }
   },1000);
 </script>
